# widps

./: .gitignore  Readme.md  docker-compose.yml  run_sniffer.sh  run_widps.sh
cpp_sniffer/: CMakeLists.txt  Dockerfile  docker-compose.yml
cpp_sniffer/include/: common.hpp  csv_parser.hpp  event_builder.hpp  http_client.hpp
cpp_sniffer/src/: csv_parser.cpp  event_builder.cpp  http_client.cpp  main.cpp
data/: widps_capture-02.csv  widps_capture-03.csv
data_layer/: Dockerfile  main.py  runtime.py
data_layer/ output/: broadcaster.py  telemetry.py  ws.py
data_layer/events/: engine.py  types.py
data_layer/events/correalation/: rules.py
data_layer/events/correlation/: engine.py  rules.py
data_layer/events/detectors/: ap_detectors.py  client_detectors.py  evil_twin.py
data_layer/events/scoring/: scorer.py
data_layer/ingest/: api.py  validator.py
data_layer/output/: broadcaster.py  telemetry.py  ws.py
data_layer/state/: models.py  store.py
frontend/app/dashboard/: layout.jsx  page.jsx
frontend/app/dashboard/components/: APTable.jsx  BottomPanel.jsx  CenterPanel.jsx  LeftPanel.jsx  RightPanel.jsx  Topbar.jsx
frontend/app/dashboard/components/hooks/: useWS.js
frontend/app/dashboard/hooks/: useBaseline.js  useWS.js
frontend/app/dashboard/utils/: colors.js
